tests/ui/standard-json/type-error/A.sol
contract A {
    function f() public pure {
        uint x = true;
    }
}
